--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.22.3"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.4.6"
   }
 }
